// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusIcon different states identified 1`] = `
<div>
  <span
    class="flex items-center justify-center h-4 w-4 rounded-full bg-orange-500 text-white"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-exclamation fa-fw"
      data-icon="exclamation"
      data-prefix="fas"
      role="img"
      style="font-size: 8px;"
      viewBox="0 0 128 512"
    >
      <path
        d="M64 432c22.1 0 40 17.9 40 40s-17.9 40-40 40-40-17.9-40-40c0-22.1 17.9-40 40-40zM64 0c26.5 0 48 21.5 48 48 0 .6 0 1.1 0 1.7l-16 304c-.9 17-15 30.3-32 30.3S33 370.7 32 353.7L16 49.7c0-.6 0-1.1 0-1.7 0-26.5 21.5-48 48-48z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`StatusIcon different states investigating 1`] = `
<div>
  <span
    class="flex items-center justify-center h-4 w-4 rounded-full bg-red-500 text-white"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-exclamation fa-fw"
      data-icon="exclamation"
      data-prefix="fas"
      role="img"
      style="font-size: 8px;"
      viewBox="0 0 128 512"
    >
      <path
        d="M64 432c22.1 0 40 17.9 40 40s-17.9 40-40 40-40-17.9-40-40c0-22.1 17.9-40 40-40zM64 0c26.5 0 48 21.5 48 48 0 .6 0 1.1 0 1.7l-16 304c-.9 17-15 30.3-32 30.3S33 370.7 32 353.7L16 49.7c0-.6 0-1.1 0-1.7 0-26.5 21.5-48 48-48z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`StatusIcon different states recovering 1`] = `
<div>
  <span
    class="flex items-center justify-center h-4 w-4 rounded-full bg-orange-500 text-white"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-exclamation fa-fw"
      data-icon="exclamation"
      data-prefix="fas"
      role="img"
      style="font-size: 8px;"
      viewBox="0 0 128 512"
    >
      <path
        d="M64 432c22.1 0 40 17.9 40 40s-17.9 40-40 40-40-17.9-40-40c0-22.1 17.9-40 40-40zM64 0c26.5 0 48 21.5 48 48 0 .6 0 1.1 0 1.7l-16 304c-.9 17-15 30.3-32 30.3S33 370.7 32 353.7L16 49.7c0-.6 0-1.1 0-1.7 0-26.5 21.5-48 48-48z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`StatusIcon different states resolved 1`] = `
<div>
  <span
    class="flex items-center justify-center h-4 w-4 rounded-full bg-green-500 text-white"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-check fa-fw"
      data-icon="check"
      data-prefix="fas"
      role="img"
      style="font-size: 8px;"
      viewBox="0 0 448 512"
    >
      <path
        d="M434.8 70.1c14.3 10.4 17.5 30.4 7.1 44.7l-256 352c-5.5 7.6-14 12.3-23.4 13.1s-18.5-2.7-25.1-9.3l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l101.5 101.5 234-321.7c10.4-14.3 30.4-17.5 44.7-7.1z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`StatusIcon it renders without problems 1`] = `
<div>
  <span
    class="flex items-center justify-center h-4 w-4 rounded-full bg-green-500 text-white"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-check fa-fw"
      data-icon="check"
      data-prefix="fas"
      role="img"
      style="font-size: 8px;"
      viewBox="0 0 448 512"
    >
      <path
        d="M434.8 70.1c14.3 10.4 17.5 30.4 7.1 44.7l-256 352c-5.5 7.6-14 12.3-23.4 13.1s-18.5-2.7-25.1-9.3l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l101.5 101.5 234-321.7c10.4-14.3 30.4-17.5 44.7-7.1z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;
